// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Event /> should match snapshot when is on vacation 1`] = `
<div>
  <div
    class="sc-AxjAm sc-AxiKw hbaPQf"
  >
    <strong>
       
       Tom - vacation 
    </strong>
  </div>
</div>
`;

exports[`<Event /> should match snapshot when is sickness 1`] = `
<div>
  <div
    class="sc-AxjAm sc-AxirZ dcPfJT"
  >
    <strong>
       
       Mike - sickness 
    </strong>
  </div>
</div>
`;
